--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,36 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: XMOJ-Script-de # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: API
+    url: https://api.xmoj-bbs.tech
+  - name: 图床
+    slug: picture
+    url: https://assets.xmoj-bbs.tech
+  - name: Main Website
+    slug: main
+    url: https://www.xmoj-bbs.tech
+  - name: 小明的OJ
+    slug: xmoj
+    url: https://xmoj.tech
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status-test.xmoj-bbs.tech
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://xmoj-bbs.tech/favicon.ico
+  name: 小明的OJ增强脚本状态检查
+  introTitle: "小明的OJ增强脚本状态检查"
+  introMessage: 欢迎来到小明的OJ增强脚本状态检查
   navbar:
-    - title: Status
+    - title: 状态
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: 主页
+      href: https://xmoj-bbs.tech
+    - title: 小明的OJ
+      href: https://xmoj.tech
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
