--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,8 +19,8 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status-test.xmoj-bbs.tech
-  # baseUrl: /your-repo-name
-  logoUrl: https://xmoj-bbs.tech/favicon.ico
+  baseUrl: /upptime
+  # logoUrl: https://xmoj-bbs.tech/favicon.ico
   name: 小明的OJ增强脚本状态检查
   introTitle: "小明的OJ增强脚本状态检查"
   introMessage: 欢迎来到小明的OJ增强脚本状态检查
