--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: XMOJ-Script-de # Your GitHub organization or username, where this repository lives
+owner: XMOJ-Script-dev # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
